--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.7.7",
+    "sass": "^1.79.2",
+    "sass-loader": "^16.0.1",
     "vue": "^3.4.29",
-    "vue-facing-decorator": "^2.1.20"
+    "vue-facing-decorator": "^2.1.20",
+    "vuetify": "^3.7.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -19,7 +24,7 @@
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
-    "vue-tsc": "^2.0.21",
-    "vuetify": "^3.6.14"
+    "vite-plugin-vuetify": "^2.0.4",
+    "vue-tsc": "^2.0.21"
   }
 }
